--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
-name = "septa-tsr"
+name = "ssts"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap    = "2.33.3"
 reqwest = { version = "0.11",   features = ["blocking", "json"] }
 serde   = { version = "1.0",    features = ["derive"] }
 tokio   = { version = "1.12.0", features = ["full"] }
